overflow fix

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -58,6 +58,7 @@ body {
 .main_flexbox__item2 {
   width: 55vw;
   max-height: 100vh;
+  overflow-y: auto;
 }
 @media only screen and (max-width: 992px) {
   .main_flexbox__item2 {
